responsive tweaks to fix on mobile

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -12,6 +12,9 @@ body {
   margin:0;
   padding:0;
   width:100%;
+  @include mq($until: tablet) {
+    overflow-x: hidden;
+  }
 }
 
 ul {
