--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -16,6 +16,8 @@ header {
   		position: fixed;
   		background: $color-brand-4;
   		left: 0;
+      top: 0;
+      padding-top: 35px;
   		height: 100%;
   		width: 0px;
   		visibility: hidden;
@@ -34,5 +36,15 @@ header {
 #main {
 	margin-left: 0;
 	transition: .25s all;
+}
+
+.closeNav{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 54px;
+  line-height: 52px;
 }
 
