--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -16,7 +16,7 @@
 	}
 	 li {
 		flex: 1;
-		padding-bottom: 10px;
+		padding-bottom: 15px;
 	}
 	a {
 		color: #fff;
@@ -31,6 +31,9 @@
 			position: fixed;
 			right: 0px;
 			top: 0px;
+		}
+		@include mq($until: tablet) {
+			margin-top: 12px;
 		}
 		flex: none;
 		a {
@@ -92,6 +95,12 @@
 }
 .serviceDropdown {
 	position: relative;
+	@include mq($until: tablet) {
+		> a {
+			display: none;
+		}
+		margin-top: -10px;
+	}
 	&:hover {
 		.subMenu {
 			display: block;
@@ -106,16 +115,29 @@
   width: 100%;
   background: rgba(33,38,39,0.8);
 	padding: 12px 12px 16px;
+	@include mq($until: tablet) {
+		position: relative;
+		font-size: 18px;
+		padding: 0;
+		display: block;
+		background: none;
+	}
 	li {
 		padding-bottom: 0;
 		a {
 			padding: 8px 0;
+			@include mq($until: tablet) {
+				padding: 10px 0 0px;
+			}
 		}
 	}
 }
 .subNav {
 	margin-top: -50px;
 	margin-bottom: 30px;
+	@include mq($until: tablet) {
+
+	}
 	ul {
 		border-bottom: 1px solid #c3c3c3;
 		display: flex;
@@ -126,6 +148,9 @@
 			margin: 0 5px;
 			border-radius: 4px 4px 0 0;
 			background: #eee;
+			@include mq($until: tablet) {
+				margin: 0 2px;
+			}
 			&:hover {
 				a {color: #fff;}
 				background: $color-brand-2;
@@ -142,6 +167,10 @@
 				text-transform: uppercase;
 				width: 100%;
 				padding: 14px 10px 12px;
+				@include mq($until: tablet) {
+					font-size: 16px;
+					letter-spacing: 0;
+				}
 			}
 		}
 	}
@@ -157,10 +186,14 @@
 }
 #opennav {
 	position: absolute;
-  right: 10px;
-  top: 8px;
+  right: 14px;
+  top: 10px;
   font-size: 40px;
   border: none;
   background: none;
   color: $color-brand-4;
+	-webkit-appearance: none;
+	margin-right: 0;
+	width: auto;
+	padding: 0;
 }
